subindo portifolio para o GitHub

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,6 +15,7 @@
 	padding:16px 31px;
 	text-decoration:none;
   text-shadow:0px 1px 0px #2f6627;
+  margin: 10px;
   /* position:absolute; */
   
 }
@@ -41,7 +42,7 @@
   box-shadow: 10px 5px 5px black;
   width: 500px;
   margin: 50px;
-  height: 250px;
+  height: 300px;
   border: 10px solid white;
   border-radius: 5px;
 }
@@ -54,23 +55,6 @@
 /* Style the header */
 .header {
   padding: 10px 16px;
-  background: #555;
+  background: #44c767;
   color: #f1f1f1;
-}
-
-/* Page content */
-.content {
-  padding: 16px;
-}
-
-/* The sticky class is added to the header with JS when it reaches its scroll position */
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%
-}
-
-/* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .content {
-  padding-top: 102px;
 }
